--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -145,6 +145,9 @@ extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js  
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
 
+# ----- 页面统计 -----
+  - javascripts/statis.js
+
 # ----- other -----
 
 extra_css:
@@ -181,10 +184,12 @@ nav:
       - HC_MISC/index.md
       - 信息收集: HC_MISC/osint.md
       - 编码扩展: HC_MISC/Encode_extra.md
-      - 文件格式: HC_MISC/file_format.md
+      - 文件基础: HC_MISC/file.md
+      - 压缩包: HC_MISC/Archivefile.md
       - 隐写技术: HC_MISC/stego.md
       - 流量分析: HC_MISC/pcap.md
       - 内存取证: HC_MISC/memory.md
+      - 附:文件签名表 : HC_MISC/file_sign.md
 
     - Web | 网络攻防:
       - HC_Web/index.md
@@ -202,6 +207,7 @@ nav:
 
     - Pwn | 二进制安全:
       - HC_PWN/index.md
+      - 0. &nbsp; 汇编语言(x86): HC_PWN/Asm_x86.md
       - 1. &nbsp; 栈上数组越界&栈溢出: HC_PWN/Stack_Overflow.md
       - 1.1. &nbsp; ROP入门: HC_PWN/ROP.md
       - 1.2. &nbsp; 常见的ROP技巧: HC_PWN/ROP_Tricks.md
